Added navbar and live video

--- a/Frontend/src/app/app.less
+++ b/Frontend/src/app/app.less
@@ -1,7 +1,7 @@
 @import 'calendar/calendar.less';
 @import './core/navbar/navbar.less';
+@import './pages/main/main.less';
 
-.hd-view {
-    margin-top: 50px;
-    position: absolute;
+html, body{
+    height: 100%;
 }
