--- a/Frontend/src/app/pages/main/main.tpl.html
+++ b/Frontend/src/app/pages/main/main.tpl.html
@@ -1,1 +1,15 @@
-<h1>Main page</h1>
+<div class="jumbotron">
+    <video id="video-background" preload muted autoplay loop>
+        <source src="http://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
+        <source src="http://www.w3schools.com/html/mov_bbb.ogg" type="video/ogg">
+    </video>
+    <div class="container">
+        Hello World
+    </div>
+</div>
+
+<h1 class="success">Наши успехи</h1>
+
+<div ng-repeat="success in ctrl.successes">
+    <hd-success success="success"></hd-success>
+</div>
