added timeline page

--- a/Frontend/src/app/app.less
+++ b/Frontend/src/app/app.less
@@ -1,4 +1,5 @@
 @import 'calendar/calendar.less';
+@import 'timelineComponent/timelineComponent.less';
 @import './core/navbar/navbar.less';
 @import './pages/main/main.less';
 
