Added background page to main page Added success component

--- a/Frontend/src/app/app.less
+++ b/Frontend/src/app/app.less
@@ -1,7 +1,9 @@
 @import 'calendar/calendar.less';
 @import './core/navbar/navbar.less';
 @import './pages/main/main.less';
+@import './success/success.less';
 
 html, body{
     height: 100%;
+    overflow-x: hidden;
 }
