--- a/Frontend/src/app/success/success.tpl.html
+++ b/Frontend/src/app/success/success.tpl.html
@@ -1,1 +1,6 @@
-<h1>Успех</h1>
+<div>
+    <div class="success-wrapper">
+        <div class="success-circle"></div>
+        <h1 class="success-text" ng-bind="ctrl.success.text"></h1>
+    </div>
+</div>
