--- a/Frontend/src/app/pages/login/login.tpl.html
+++ b/Frontend/src/app/pages/login/login.tpl.html
@@ -1,8 +1,19 @@
-<div>
-    <label for="mail">Электронная почта:</label>
-    <input id="mail" type="email" ng-model="ctrl.Email">
-    <label for="pass">Пароль:</label>
-    <input id="pass" type="password" ng-model="ctrl.Password">
-    <img src="staff/images/social_buttons.jpg">
-    <input type="button" value="Войти" ng-click="ctrl.Login()">
+<br>
+<br>
+<br>
+<div class="loggin-page container">
+    <div class="row">
+        <label for="mail">Электронная почта:</label>
+        <input id="mail" type="email" ng-model="ctrl.Email">
+    </div>
+    <div class="row">
+        <label for="pass">Пароль:</label>
+        <input id="pass" type="password" ng-model="ctrl.Password">
+    </div>
+    <div class="row">
+        <img src="staff/images/social_buttons.jpg">
+    </div>
+    <div class="row">
+        <input type="button" value="Войти" ng-click="ctrl.Login()">
+    </div>
 </div>
