--- a/Frontend/src/app/pages/main/main.less
+++ b/Frontend/src/app/pages/main/main.less
@@ -55,3 +55,26 @@
     z-index: -2;
     opacity: 0.5;
 }
+
+.benefactor-image{
+    height: 60px;
+    width: 60px;
+    background-color: rebeccapurple;
+    border-radius: 50%;
+    padding: 22px;
+    margin-right: 20px;
+}
+
+.inline {
+    display: inline-flex;
+}
+
+.benefactors {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.benefector{
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
