--- a/Frontend/src/app/success/success.tpl.html
+++ b/Frontend/src/app/success/success.tpl.html
@@ -1,6 +1,7 @@
 <div>
     <div class="success-wrapper">
         <div class="success-circle"></div>
+        <!--<svg class="fillgauge" width="97%" height="150" onclick="gauge1.update(NewValue());"></svg>-->
         <h1 class="success-text" ng-bind="ctrl.success.text"></h1>
     </div>
 </div>
