--- a/Frontend/src/app/pages/main/main.tpl.html
+++ b/Frontend/src/app/pages/main/main.tpl.html
@@ -24,3 +24,12 @@
 </div>
 
 <h1 class="text-center">Наши благодетели</h1>
+
+<div class="container benefactors">
+    <div class="benefector" ng-repeat="benefactor in ctrl.benefactors">
+        <div class="benefactor-image inline"></div>
+        <div class="inline">
+            <h1> {{benefactor.fullName}}</h1>
+        </div>
+    </div>
+</div>
