--- a/Frontend/src/app/gallery/gallery.tpl.html
+++ b/Frontend/src/app/gallery/gallery.tpl.html
@@ -8,13 +8,13 @@
 
         <div class="col-lg-3 col-md-4 col-xs-6 thumb" ng-repeat="image in ctrl.images">
             <a class="thumbnail" href="#">
-                <img class="img-responsive" src="{{image.ImageUrl}}" alt="">
+                <img class="img-responsive" src="{{image.ImgUrl}}" alt="">
             </a>
 
             <div class="caption">
                 <h3>{{image.Name}}</h3>
                 <p>Пол: {{image.Sex}}.</p>
-                <p>{{Image.Description}}</p>
+                <p>{{image.Description}}</p>
             </div>
 
         </div>
