--- a/Frontend/src/app/timelineComponent/timelineComponent.less
+++ b/Frontend/src/app/timelineComponent/timelineComponent.less
@@ -1,4 +1,67 @@
 .timeline-component {
+  .hover:hover {
+    z-index: 1000;
+    border-color: #bbb;
+    border-right: 1px solid #aaa;
+    border-bottom: 1px solid #aaa;
+
+    -o-transform: scale(1);
+    -moz-transform: scale(1);
+    -webkit-transform: scale(1);
+    transform: scale(1);
+
+    -moz-box-shadow: 0 15px 50px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: 0 15px 50px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 15px 50px rgba(0, 0, 0, 0.3);
+  }
+
+  .hover {
+
+  }
+
+  .date {
+    cursor: pointer;
+    top: 15px;
+    width: 100px;
+    height: 110px;
+    background: #fcfcfc;
+    background: linear-gradient(top, #fcfcfc 0%, #dad8d8 100%);
+    background: -moz-linear-gradient(top, #fcfcfc 0%, #dad8d8 100%);
+    background: -webkit-linear-gradient(top, #fcfcfc 0%, #dad8d8 100%);
+    border: 1px solid #d2d2d2;
+    border-radius: 10px;
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
+    -webkit-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
+  }
+
+  .date p {
+    font-family: Helvetica, sans-serif;
+    font-size: 50px;
+    text-align: center;
+    color: #9e9e9e;
+  }
+
+  .date p span {
+    background: #d10000;
+    background: linear-gradient(top, #d10000 0%, #7a0909 100%);
+    background: -moz-linear-gradient(top, #d10000 0%, #7a0909 100%);
+    background: -webkit-linear-gradient(top, #d10000 0%, #7a0909 100%);
+    font-size: 20px;
+    font-weight: bold;
+    color: #fff;
+    text-transform: uppercase;
+    display: block;
+    border-top: 3px solid #a13838;
+    border-radius: 0 0 10px 10px;
+    -moz-border-radius: 0 0 10px 10px;
+    -webkit-border-radius: 0 0 10px 10px;
+    padding: 6px 0 6px 0;
+
+  }
+
   .timeline {
     list-style: none;
     padding: 20px 0 20px;
@@ -44,12 +107,19 @@
   .timeline > li > .timeline-panel {
     width: 46%;
     float: left;
+    top: -90px;
     border: 1px solid #d4d4d4;
     border-radius: 2px;
     padding: 20px;
     position: relative;
     -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
     box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+  }
+
+  .timeline-none {
+    .timeline-panel {
+      left: -30px !important;
+    }
   }
 
   .timeline > li > .timeline-panel:before {
@@ -77,26 +147,17 @@
   }
 
   .timeline > li > .timeline-badge {
-    color: #fff;
-    width: 50px;
-    height: 50px;
-    line-height: 50px;
     font-size: 1.4em;
     text-align: center;
-    position: absolute;
-    top: 16px;
-    left: 50%;
+    position: relative;
+    left: 48%;
     margin-left: -25px;
-    background-color: #999999;
     z-index: 100;
-    border-top-right-radius: 50%;
-    border-top-left-radius: 50%;
-    border-bottom-right-radius: 50%;
-    border-bottom-left-radius: 50%;
   }
 
   .timeline > li.timeline-inverted > .timeline-panel {
     float: right;
+    left: 3%;
   }
 
   .timeline > li.timeline-inverted > .timeline-panel:before {
