--- a/Frontend/src/app/app.less
+++ b/Frontend/src/app/app.less
@@ -5,6 +5,7 @@
 @import './pages/main/main.less';
 @import './success/success.less';
 @import './pages/galleryPage/galleryPage.less';
+@import './pages/login/login.less';
 
 html, body{
     height: 100%;
