--- a/Frontend/src/app/pages/main/main.less
+++ b/Frontend/src/app/pages/main/main.less
@@ -57,12 +57,13 @@
 }
 
 .benefactor-image{
-    height: 60px;
-    width: 60px;
+    height: 100px;
+    width: 100px;
     background-color: rebeccapurple;
     border-radius: 50%;
-    padding: 22px;
+    padding: 40px;
     margin-right: 20px;
+    background-size: cover;
 }
 
 .inline {
