--- a/Frontend/src/app/pages/main/main.tpl.html
+++ b/Frontend/src/app/pages/main/main.tpl.html
@@ -1,12 +1,14 @@
-<div class="jumbotron">
+<div class="jumbotron" style="padding-top:inherit">
     <div class="dogs-image"></div>
     <div class="container main-text">
         <div class="small-text header">
-            МГКУ «Спецавтопредприятие» -основной функцией которого является перевозка и утилизация ТБО. транспортные услуги, сбор и реализация
+            МГКУ «Спецавтопредприятие» -основной функцией которого является перевозка и утилизация ТБО. транспортные
+            услуги, сбор и реализация
             вторсырья, отстрел собак и кошек
         </div>
         <div class="small-text">
-            Каждый день наши волонтеры посещают вольеры, где стоят собаки, что бы покормить их и убрать у них. Каждый волонтер или двое
+            Каждый день наши волонтеры посещают вольеры, где стоят собаки, что бы покормить их и убрать у них. Каждый
+            волонтер или двое
             берут на себя 1 день посещения. Посещения в определенное время с 9.00 до 11.00
         </div>
         <div class="small-text">
