--- a/Frontend/src/app/pages/main/main.less
+++ b/Frontend/src/app/pages/main/main.less
@@ -79,3 +79,23 @@
     margin-top: 20px;
     margin-bottom: 20px;
 }
+
+.donate{
+    position: fixed;
+    bottom: 30px;
+    right: 50px;
+    border: 1px solid #eeeeee;
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 2px 1px -1px rgba(0, 0, 0, 0.12);
+    background-color: ghostwhite;
+    &:hover{
+        cursor: pointer;
+    }
+}
+
+.donate-text {
+    margin-top: 31px;
+    margin-left: 7px;
+}
