add give money page

--- a/Frontend/src/app/app.less
+++ b/Frontend/src/app/app.less
@@ -6,6 +6,7 @@
 @import './success/success.less';
 @import './pages/galleryPage/galleryPage.less';
 @import './pages/login/login.less';
+@import './pages/giveMoney/giveMoney.less';
 
 html, body {
   height: 100%;
