--- a/Frontend/src/app/gallery/gallery.tpl.html
+++ b/Frontend/src/app/gallery/gallery.tpl.html
@@ -4,6 +4,8 @@
 
         <div class="col-lg-12">
             <h1 class="page-header">Галерея</h1>
+            <h4>Чтобы забрать животное, вы должны нажать на кнопку "Взять эту", либо позвоните по номеру
+                375(29)679-66-52</h4>
         </div>
 
         <div class="col-lg-3 col-md-4 col-xs-6 thumb" ng-repeat="image in ctrl.images">
@@ -13,8 +15,12 @@
 
             <div class="caption">
                 <h3>{{image.Name}}</h3>
+
                 <p>Пол: {{image.Sex}}.</p>
+
                 <p>{{image.Description}}</p>
+                <button type="button" class="btn btn-info" style="position: absolute; bottom: 0; right: 30px;">Взять эту
+                </button>
             </div>
 
         </div>
