Added plus event

--- a/Frontend/src/app/pages/main/main.tpl.html
+++ b/Frontend/src/app/pages/main/main.tpl.html
@@ -36,6 +36,6 @@
     </div>
 </div>
 
-<div class="donate">
+<div class="donate" ng-click="ctrl.click()">
     <h4 class="donate-text">Помочь</h2>
 </div>
