--- a/Frontend/src/app/timelineComponent/timelineComponent.less
+++ b/Frontend/src/app/timelineComponent/timelineComponent.less
@@ -244,3 +244,24 @@
     }
   }
 }
+
+.new-event{
+    position: fixed;
+    bottom: 30px;
+    right: 50px;
+    border: 1px solid #eeeeee;
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 2px 1px -1px rgba(0, 0, 0, 0.12);
+    background-color: ghostwhite;
+    &:hover{
+        cursor: pointer;
+    }
+}
+
+.new-event-text {
+    font-size: 60px;
+    margin-top: 10px;
+    margin-left: 22px;
+}
