--- a/Frontend/src/app/pages/login/login.tpl.html
+++ b/Frontend/src/app/pages/login/login.tpl.html
@@ -9,9 +9,9 @@
         <input ng-model="ctrl.Email" type="email" id="inputEmail" class="form-control" placeholder="Емейл адрес" required="" autofocus="">
         <label for="inputPassword" class="sr-only">Пароль</label>
         <input ng-model="ctrl.Password" type="password" id="inputPassword" class="form-control" placeholder="Пароль" required="">
+        <img src="staff/images/social_buttons.jpg">
         <button class="btn btn-lg btn-primary btn-block" type="submit">Войти</button>
     </form>
 
 </div>
 
-<!--<img src="staff/images/social_buttons.jpg">-->
